# qtSample

./: README.md
GestureLogin/: GestureLogin.pro  main.cpp  qwhgesturelogin.cpp  qwhgesturelogin.h
QDbusDemo/: QDbusDemo.pro
corningAnimation/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
corningAnimation/loadingAnimation/newtonCradle/: ball.cpp  ball.h  newtoncradle.cpp  newtoncradle.h
fcitx-auto-onboard/: fcitx-auto-onboard_0.1.0002.dsc  fcitx-auto-onboard_0.1.0002.tar.xz
fcitx-auto-onboard/build-fcitx-auto-onboard-0.1.0001-unknown-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  fcitx-auto-onboard.cbp
fcitx-auto-onboard/build-fcitx-auto-onboard-0.1.0001-unknown-Debug/.cmake/api/v1/reply/: cache-v2-0c7a9985dc99944c05a9.json  cmakeFiles-v1-fc1b8c934944331b84ef.json  codemodel-v2-80d20743b8f19a3e24c9.json  index-2020-11-26T05-49-36-0096.json  target-fcitx-addon-fcitx-auto-onboard--addon--conf-1-Debug-7c5753d34ee762a43f14.json  target-fcitx-addon-fcitx-auto-onboard--addon--desc-1-Debug-bb49a958317a4198e0d4.json  target-fcitx-addon-fcitx-auto-onboard--headers-1-Debug-7ecb6afcbae591740b4f.json  target-fcitx-addon-translation-handler-1-Debug-ad7cd15bb4141dccf906.json  target-fcitx-addon-translation-handler-2-Debug-0f7dfeafb5fdcc620076.json  target-fcitx-addon-translation-handler-3-Debug-753ca88d6944c4b2c019.json  target-fcitx-addon-translation-handler-4-Debug-149b76673324e8ead770.json  target-fcitx-addon-translation-handler-5-Debug-ad1ac44736818349d8e4.json  target-fcitx-addon-translation-handler-6-Debug-89c0ec9ebf891e982396.json  target-fcitx-auto-onboard--addon-Debug-73f32be4c40d2d2aecac.json  target-fcitx-auto-onboard-Debug-b0a830a2ac9f6bd0c87a.json  target-fcitx-extract-traslation.dependency-Debug-e20d8dbd2df37ad84b29.json  target-fcitx-modules.target-Debug-cbda2f98b2e5fc2f23a5.json  target-fcitx-parse-pos.dependency-Debug-610d26dad542e9efbf99.json  target-fcitx-scan-addons.target-Debug-dd31646328b9da0331a5.json  target-uninstall-Debug-eca0816ac2ce25e87035.json
fcitx-auto-onboard/build-fcitx-auto-onboard-0.1.0001-unknown-Debug/fcitx_cmake_cache/: handlers-cache.txt
fcitx-auto-onboard/build-fcitx-auto-onboard-0.1.0001-unknown-Debug/src/: Makefile  cmake_install.cmake  fcitx-auto-onboard.conf
fcitx-auto-onboard/fcitx-auto-onboard-0.1.0001/: CMakeLists.txt
fcitx-auto-onboard/fcitx-auto-onboard-0.1.0001/debian/: changelog  control  copyright  install  rules
fcitx-auto-onboard/fcitx-auto-onboard-0.1.0001/src/: CMakeLists.txt  auto-onboard.c
test/: testuinput.c
testWebEngineView/: mainwindow.cpp  mainwindow.h  testWebEngineView.pro
